# osc2ftdidmx

./: .gitignore  .gitlab-ci.yml  ChangeLog  README.md  main.c  meson.build  osc2ftdidmx.1  osc2ftdidmx.c  osc2ftdidmx.h  test.c  test.sh
osc.lv2/: reader.h  stream.h
osc.lv2/osc.lv2/: util.h
osc.lv2/test/: osc_test.c
test/: osc_test.c
